@@ -15,7 +15,7 @@
       <Damage>
         <Pierce>16</Pierce>
       </Damage>
-      <MaxRange>30</MaxRange>
+      <MaxRange>27.5</MaxRange>
       <PrepareTime>400</PrepareTime>
       <RepeatTime>1500</RepeatTime>
       <Projectile>
