@@ -1,7 +1,7 @@
 26.11
 Spartans
 Spartan rams garrison increased to 15 (rams were first siege engines recorded  (in Assyria) soon to be adopted by sparta) Cost 400 wood no metal, crush dmg reduced by 30% build time 25 instead of 30
-Spartan "merc javs" start out with regular jav stats p1 but + 1 pierce and hack resistance, train time increased to 15 seconds.  Now can only train from CC, Market in p2
+Spartan "merc javs" start out with regular jav stats p1 but + 1 pierce and hack resistance, train time reduced to 9 seconds plus Merc penalty.  Now can only train from CC, Market in p2
 advanced melee dmg bonus increased to 1.15 from 1.10
 range added to 1.05 and 2 range
 Sparta common javs can no longer promote to merc jav.  Also when training from house cost 50 food instead of 40.  "fertility" for common jav increased 100 food and wood (400/400)
@@ -26,6 +26,7 @@ City phase increases CC capacity by 10 (35 total) Citizen Health increases 10%
 Added aura to siege towers, trying to make them a little more accurate.   Decreased range, increased repeat time (they weren't used for shooting projectiles at infantry.)  Increased health, gave them "capture attack" of 10 to see if that helps
 Stone throwers now can cause friendly fire dmg (onager included in friendly fire but not other changes), range increased to 2 from 1.5, splace dmg 115 from 120
 Slingers dmg changed to 12.0 pierce .5 crush instead of 11.5/1.0
+reduced ranged units by about 10% due to the fact they now gain range as they rank up (did not include champions since they don't promote)
 
 Han
 Han Mangonel increased range by 5 and crush dmg by 20 (They are credited with the trebuchet, stronger version of the catapult)
